--- a/tvnot/static/style.css
+++ b/tvnot/static/style.css
@@ -22,6 +22,9 @@ div.content {
   margin: 10px 0;
   padding: 0 0 20px 0;
 }
+div.text {
+  text-align: left;
+}
 div.header {
   padding: 20px 0 30px 0;
   color: #b58900;
