--- a/tvnot/static/style.less
+++ b/tvnot/static/style.less
@@ -30,6 +30,10 @@ div.content {
   padding: 0 0 20px 0;
 }
 
+div.text {
+  text-align: left;
+}
+
 div.header {
   padding: 20px 0 30px 0;
   color: @yellow;
