update contents as per name change

--- a/tvnot/templates/about.html
+++ b/tvnot/templates/about.html
@@ -1,7 +1,17 @@
 {% extends "base.html" %}
 {% block content %}
 <h3> About: </h3>
-<div class="data">
-  This website is cool and lovely. It's all about organizing your time
+<div class="text">
+  <p>
+  wisdom.cat - is a video aggregator website that aggregates bite size videos
+  which are in some way educational. The intention of this website is to have something
+  beneficial to watch during short down-time periods; i.e. while grabbing a snack in between work sessions.
+  </p>
+  <p>
+    wisdom.cat runs on python, flask and is open source under copy-left GPLv3 license:
+  </p>
+  <p>
+    ₍˄·͈༝·͈˄₎◞ ̑̑ෆ⃛ <a href="https://github.com/Granitosaurus/wisdom.cat">http://github.com/granitosaurus/wisdom.cat</a>
+  </p>
 </div>
 {% endblock content %}
