--- a/tvnot/templates/base.html
+++ b/tvnot/templates/base.html
@@ -6,7 +6,8 @@
 <body>
 <div class="header">
   <a href="/">
-    NoTV - bite size videos that shouldn't dumb you down.
+    <div>=( ^ >w< ^ )=</div>
+    bite size videos that shouldn't dumb you down
   </a>
 </div>
 <div class="content">
@@ -17,6 +18,9 @@
   <a href="/configure">configure</a> |
   <a href="/archive">archive</a> |
   <a href="/about">about</a>
+  <div>
+  <a href="https://github.com/Granitosaurus/wisdom.cat">source on github</a>
+  </div>
 </div>
 </body>
 
