--- a/wisdomcat/templates/base.html
+++ b/wisdomcat/templates/base.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
 <html lang="en">
+<meta name="author" content="Bernardas Ališauskas">
+<meta name="description" content="Bite size videos that shouldn't dumb you down">
+<meta property="og:site_name" content="=( ^ >w< ^ )=">
+<meta property="og:type" content="blog">
+<meta property="og:title" content="Wisdom Cat">
+<meta property="og:description" content="Bite size videos that shouldn't dumb you down">
+<meta property="og:locale" content="en_US">
+<meta property="og:url" content="http://wisdom.cat">
+<meta property="og:image" content="=( ^ >w< ^ )=">
 <head>
 </head>
 <body>
