rework to not abuse sessions and work purely on redis instead

--- a/wisdomcat/templates/index.html
+++ b/wisdomcat/templates/index.html
@@ -9,7 +9,7 @@
   <div>viewed {{ '{0:,}'.format(item.views|int) }} times</div>
 </div>
 <h3>
-  <a href="/post/{{ video_index + 1}}">>>Something else<<</a>
+  <a href="/meow/{{ video_index + 1}}">>>Something else<<</a>
 </h3>
 
 {% endblock content %}
