add catalonian description

--- a/wisdomcat/templates/about.html
+++ b/wisdomcat/templates/about.html
@@ -13,5 +13,11 @@
   <p>
     ₍˄·͈༝·͈˄₎◞ ̑̑ෆ⃛ <a href="https://github.com/Granitosaurus/wisdom.cat">http://github.com/granitosaurus/wisdom.cat</a>
   </p>
+  <hr>
+  <p>
+    wisdom.cat - és un lloc web agregador de vídeo que afegeix vídeos de mida de mos que són d'alguna manera educativa.
+    La intenció d'aquest lloc web és tenir alguna cosa beneficiós per mirar durant períodes
+    curts d'interrupció perllongada; és a dir, mentre que agafar un aperitiu entre sessions de treball.
+  </p>
 </div>
 {% endblock content %}
