fix channel href

--- a/wisdomcat/templates/index.html
+++ b/wisdomcat/templates/index.html
@@ -4,7 +4,7 @@
         allowfullscreen></iframe>
 <div class="data">
   <h3>{{ item.name }}</h3>
-  <span>by <a href="https://www.youtube.com/{{ item.author_id }}">{{ item.author }}</a></span>
+  <span>by <a href="https://www.youtube.com/channel/{{ item.author_id }}">{{ item.author }}</a></span>
   <span>on {{ item.date }}</span>
   <div>viewed {{ '{0:,}'.format(item.views|int) }} times</div>
 </div>
